--- a/index.html
+++ b/index.html
@@ -11,28 +11,10 @@
 
 <body>
   <!--header-->
-  <nav class="navbar navbar-expand-lg bg-secondary bg-dark navbar-dark fixed-top">
-    <div class="container-fluid encabezado">
-      <a class="navbar-brand text-white" href="#">
-        <img src="img/codoacodo.png" alt="Logo" width="100" class=" d-inline-block align-text-center">
-        Conf Bs As
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#La conferencia">La conferencia</a>
-            <a class="nav-link" href="#Oradores">Conoce a los oradores</a>
-            <a class="nav-link" href="#Lugar">El lugar y la fecha</a>
-            <a class="nav-link" href="#Conviertete">Convierte en orador</a>
-            <a class="nav-link text-success" href="comprarTicket.html">Comprar ticket</a>
-          </div>
-        </div>
-      </div>
-  </nav>
+  <header id="header-container">
+    <!-- El encabezado se cargará aquí dinámicamente con JavaScript -->
+  </header>
+
   <!--imagen y texto principal-->
   <div class="container-fluid">
     <div class="row flex-row-reverse imgfondo text-white align-items-center">
@@ -42,7 +24,8 @@
           quisquam dicta mollitia ullam officiis laborum porro, doloremque praesentium.</p>
         <div class="flex">
           <button type="button" class="btn btn-outline-light">Quiero ser Orador</button>
-          <button type="button" class="btn btn-success btn-comprar" ><a class="nav-link" href="comprarTicket.html">Comprar ticket</a></button>
+          <button type="button" class="btn btn-success btn-comprar"><a class="nav-link"
+              href="comprarTicket.html">Comprar ticket</a></button>
         </div>
       </div>
     </div>
@@ -125,28 +108,12 @@
       </div>
     </div>
   </section>
-  <footer class="footer">
-    <div class="container-fluid text-center">
-      <div class="row">
-        <nav class="navbar navbar-expand-lg text-center ">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <div class="collapse navbar-collapse justify-content-end">
-              <a href="preguntas.html" class="a-nav">Preguntas <br>frecuentes</a>
-              <a href="contactanos.html" class="a-nav">Contáctanos</a>
-              <a href="" class="a-nav">Prensa</a>
-              <a href="#" class="a-nav">Conferencia</a>
-              <a href="#" class="a-nav">Términos y <br> condiciones</a>
-              <a href="#" class="a-nav">Privacidad</a>
-              <a href="#" class="a-nav">Estudiantes</a>
-        </nav>
-      </div>
-    </div>
+
+  <footer id="footer-container">
+    <!-- El pie de página se cargará aquí dinámicamente con JavaScript -->
   </footer>
-  <script src="js/bootstrap.bundle.min.js"></script>
+  <!--<script src="js/bootstrap.bundle.min.js"></script>-->
+  <script src="js/loadHeaderFooter.js"></script>
 </body>
 
 </html>
